# todol

./: .gitignore  ;  CMakeLists.txt  Makefile  README.md  index.html
src/: color.hpp  main.cpp  socket.cpp  socket.hpp  timeutil.cpp  timeutil.hpp  todol.cpp  todol.hpp  todol_at.cpp  todol_at.hpp  todol_dmenu.cpp  todol_dmenu.hpp  todol_storage.cpp  todol_storage.hpp  todol_web.cpp  todol_web.hpp
test/: at.cpp  httpserver.cpp  socket.cpp
